# SparkFun_ICM-20948_PILibrary

./: CMakeLists.txt  README.md
examples/Arduino/Example1_Basics/: Example1_Basics.cpp
examples/Raspberry/Example2_Advanced/: Example2_Advanced.cpp
examples/Raspberry/Example3_Interrupts/: Example3_Interrupts.ino
examples/Raspberry/Example6_DMP_Quat9_Orientation/: Example6_DMP_Quat9_Orientation.ino
examples/Raspberry/Example7_DMP_Quat6_EulerAngles/: Example7_DMP_Quat6_EulerAngles.cpp
src/: ICM_20948.cpp  ICM_20948.h  bindings.cpp
